--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 
     <head>
         <title>בדיקת מוצרים לפסח</title>
+        <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1">
+
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="w3.css">
     </head>
     
     <body>
 
+        <h1>בדוק האם מוצר כשר לפסח</h1>
+
         <label>מספר ברקוד</label>
         <input type="text" />
+        <button onclick="checkItem">בדוק</button>
+
+        <br>
+        <br>
+
+        <p id="itemData"></p>
 
     </body>
 
