--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>בדוק האם מוצר כשר לפסח</h1>
 
         <label>מספר ברקוד</label>
-        <input type="text" />
+        <input id="barcodeValue" type="text" />
         <button onclick="checkItem">בדוק</button>
 
         <br>
