fix function call on click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <label>מספר ברקוד</label>
         <input id="barcodeValue" type="text" />
-        <button onclick="checkItem">בדוק</button>
+        <button onclick="checkItem()">בדוק</button>
 
         <br>
         <br>
