--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>בדיקת כשרות מוצר לפסח</h1>
         </header>
 
-        <div id="content">
+        <div id="content w3-cell-row w3-display-middle">
 
             <div class="w3-margin w3-center">
 
@@ -30,11 +30,12 @@
                 <h1 id="resultHeader" class="w3-panel w3-cyan">מידע על מוצר</h1>
 
                 <div class="w3-margin-right">
-                    <label for="itemName" class="w3-opacity"><b>שם מוצר: </b></label>
-                    <span id="itemName"></span><br/>
-    
+
                     <label for="itemBarcode" class="w3-opacity"><b>ברקוד: </b></label>
                     <span id="itemBarcode"></span><br/>
+
+                    <label for="itemName" class="w3-opacity"><b>שם מוצר: </b></label>
+                    <span id="itemName"></span><br/>
         
                     <label for="itemInfo" class="w3-opacity"><b>מידע נוסף: </b></label>
                     <span id="itemInfo"></span><br class="w3-margin-bottom"/>
