--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span id="itemBarcode"></span><br/>
 
                     <label for="itemName" class="w3-opacity"><b>שם מוצר: </b></label>
-                    <span id="itemName"></span><br/>
+                    <span id="itemName"></span><br class="w3-margin-bottom"/>
                     
                     <!--
                     <label for="itemInfo" class="w3-opacity"><b>מידע נוסף: </b></label>
