--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <link rel="stylesheet" href="w3.css">
     </head>
     
-    <body class="w3-blue-grey">
+    <body class="w3-blue-grey" onload="init()">
 
         <header id="header" class="w3-container w3-center w3-teal">
             <h1>בדיקת כשרות מוצר לפסח</h1>
         </header>
 
-        <div id="content w3-cell-row w3-display-middle">
+        <div id="content" class="w3-cell-row">
 
             <div class="w3-margin w3-center">
 
@@ -46,6 +46,10 @@
             </div>
     
         </div>
+
+        <footer id="footer" class="w3-container w3-center w3-dark-grey">
+            <p>ט.ל.ח</p>
+        </footer>
 
     </body>
 
