--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body class="w3-blue-grey" onload="init()">
 
         <header id="header" class="w3-container w3-center w3-teal">
-            <h1>בדיקת כשרות מוצר לפסח</h1>
+            <h1>בדיקת הימצאות חמץ במוצרים</h1>
         </header>
 
         <div id="content" class="w3-cell-row">
